Fix spacing for instruction page content

--- a/frontend/src/stylesheets/components/instructions/_instructions_page.scss
+++ b/frontend/src/stylesheets/components/instructions/_instructions_page.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   height: 100%;
   width: 100%;
   overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 .instructions-sidebar {
@@ -13,18 +15,24 @@
   justify-content: center;
   // background-color: yellow;
   height: 675px;
-  width: 200px;
+  width: 250px;
 }
 
 .instructions-sidebar-items {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
+   width: 250px;
 }
 .instructions-sidebar-item {
-   background-color: $green;
-   height: 40px;
-   width: 225px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $red;
+  height: 120px;
+  width: 200px;
+  font-size: 20px;
+  font-weight: 800;
 }
 
 .instructions-gif {
@@ -33,7 +41,7 @@
   justify-content: center;
   background-color: red;
   height: 675px;
-  width: 1000px;
+  width: 900px;
 }
 
 .instructions-content {
